# hmah-shader-to-header

./: CMakeLists.txt  README.md
src/: input_args.c  input_args.h  main.c  string_builder.c  string_builder.h
